--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
                 </div>
               </div>
               <div class="mb-3">
-                <label class="form-label text-white">Grade</label>
+                <label class="form-label text-white">Major</label>
                 <select class="form-select fs-5" name="Major" required>
                   <option>Administration</option>
                   <option>IT</option>
